<resources>
    <string name="app_name">Maamas Daily Cookie</string>
    <string name="join_us">Experience Goodness in \nMaama\'s nutrient Loaded Pack </string>
    <string name="want">want to keep up with our cookie journey</string>
    <string name="join">Join our newsletter</string>
    <string name="icon">icon</string>
    <string name="get">Get Started</string>
    <string name="already_have_an_account_yet">Don\'t Have an Account yet?</string>


    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="name_hint">Your name e.g ivan</string>
    <string name="email_hint">Your email e.g johndoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Hello Kante, What cookie \ndo you want today?</string>
    <string name="search_cookies">Search for cookies</string>
    <string name="recommed">Recommended Combo</string>
    <string name="banana_cookies">Banana cookies</string>
    <string name="amount">UGX. 20,000</string>
    <string name="items">Items</string>
    <string name="item">Items</string>
    <string name="cart">Cart</string>
    <string name="hottest">Hottest</string>
    <string name="image">image</string>
    <string name="welcome_message">Healthy tasty cookies for babies and breastfeeding mothers</string>
    <string name="button">Next\n</string>
    <string name="payment">Payment</string>
    <string name="accounts">Accounts</string>
    <string name="wallet">Wallet</string>
    <string name="wallets">Wallet</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="ugx_10_000">Ugx.10,000</string>
    <string name="subtotal">SubTotal</string>
    <string name="checkout">CheckOut</string>
    <string name="my_basket">My Basket</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="don_t_have_account_register">Don\'t have account? Register</string>
    <string name="ship_address">Shipping Address</string>
    <string name="pay">Payment</string>
    <string name="change">Change</string>
    <string name="delivery">Delivery Method</string>
    <string name="order">Order</string>
    <string name="delivery_s">Delivery</string>
    <string name="summary">Summary</string>
    <string name="congs">Congratulations</string>
    <string name="order_taken">Your Order has been taken\nand is being attended to\n</string>
    <string name="track">Track Order</string>
    <string name="continue_no">Continue Shopping</string>
    <string name="continue_">Continue Shopping</string>
    <string name="delivery_">Delivery Address</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="payment_details_">Payment Details</string>
    <string name="save_info">Save Information</string>
    <string name="pay_pay_text">PayPal</string>
    <string name="bnk">Bank Transfer</string>
    <string name="mtn">MtnMoMo Pay</string>
    <string name="story">"I am excited,\nMDC made my life\neasy \nI am happy."</string>
    <string name="nakya">Nankya Fairuz</string>
    <string name="n">Nankya Fairuz</string>
    <string name="ush">UGX 100,000</string>
    <string name="impact">Impact Wallet</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Sonde\nMasaka Road\nMasaka</string>
    <string name="negotiate">Negotiable</string>
    <string name="no_location">No Location Specified</string>
    <string name="no_pay_method">No Payment Method Selected</string>
    <string name="note">Note to Delivery Man</string>
    <string name="save_address">Save Address</string>
    <string name="airtel">Airtel</string>
    <string name="card_name">Card Holders Name</string>
    <string name="card_number">Card Number</string>
    <string name="date">Date</string>
    <string name="card_ccv">CCV</string>
    <string name="c_name">Ivan Ojok</string>
    <string name="c_number">1234 5678 91023 1234</string>
    <string name="c_date">03 / 23</string>
    <string name="c_cvv">000</string>
    <string name="add_pay">Add Payment</string>
</resources>