<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PaymentDetailsFragment">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:paddingStart="5dp"
        android:text="@string/mtn"
        android:textColor="@color/g_black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ibMtnMM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibBT"
        app:layout_constraintTop_toTopOf="@+id/ibMtnMM" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:paddingStart="5dp"
        android:text="@string/pay_pay_text"
        android:textColor="@color/g_black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:paddingStart="5dp"
        android:text="@string/pay_pay_text"
        android:textColor="@color/g_black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ibPayPal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibPayPal"
        app:layout_constraintTop_toTopOf="@+id/ibPayPal" />

    <ImageButton
        android:id="@+id/ibMtnMM"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/red"
        android:scaleType="fitXY"
        android:src="@drawable/momo_pay"
        app:layout_constraintStart_toStartOf="@+id/ibBT"
        app:layout_constraintTop_toBottomOf="@+id/ibBT"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/airtel_logo"
        app:layout_constraintStart_toStartOf="@+id/ibMtnMM"
        app:layout_constraintTop_toBottomOf="@+id/ibMtnMM"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:cardBackgroundColor="#FEA351"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito"
                android:text="@string/payment_details_"
                android:textColor="#FEFEFE"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvBackToAddress"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBackToAddress"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="@drawable/backbg"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@color/g_black"
                app:drawableStartCompat="@drawable/back_arr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSaveInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibBT"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_balance_24"
        app:layout_constraintStart_toStartOf="@+id/ibPayPal"
        app:layout_constraintTop_toBottomOf="@+id/ibPayPal"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ibPayPal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/pay_pal_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center|start"
        android:paddingStart="5dp"
        android:text="@string/bnk"
        android:textColor="@color/g_black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ibBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibBT"
        app:layout_constraintTop_toTopOf="@+id/ibBT" />

</androidx.constraintlayout.widget.ConstraintLayout>